<resources>
    <string name="app_name">Zumito veloz</string>
    <string name="content_description">contentDescription</string>

    <!-- ADS -->
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <!--        <string name="banner">ca-app-pub-4515698012373396/1011049328</string>-->
    <string name="insterstitial">ca-app-pub-3940256099942544/1033173712</string>
    <!--        <string name="insterstitial">??????????</string>-->

    <!-- ERROR -->
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>

    <!-- MENU -->
    <string name="menu_description">Encuentra los 5 zumitos de naranja antes de que se les vayan las vitaminas</string>
    <string name="menu_record_actual">Récord actual: %s</string>
    <string name="menu_normal">Empezar</string>
    <string name="menu_instructions">¿Cómo se juega?</string>
    <string name="menu_ranking_title">Mejores puntuaciones</string>
    <string name="menu_ranking">Ver ranking</string>

    <!-- INSTRUCTIONS -->
    <string name="instructions_title">¿Cómo se juega?</string>
    <string name="instructions_one">Primero se te mostrará la posición de todos los zumos y venenos.</string>
    <string name="instructions_two">Después de un tiempo <b>todo se ocultará</b>.</string>
    <string name="instructions_three">El juego trata de encontar los <b>cinco zumos de naranja</b> pulsando sobre la posición en la que se encontraban.</string>
    <string name="instructions_four">Si los encuentras todos pasas de nivel.</string>
    <string name="instructions_five">Si pulsas en un veneno, <b>pierdes una vida</b>.\nTienes <b>cinco vidas</b>.</string>
    <string name="instructions_six">Cada vez el tiempo para ver las posiciones de los zumos irá más rápido así que ándate con ojo.</string>
    <string name="instructions_seven">Existe un <b>ranking mundial</b> para ver las mejores puntuaciones, y si superas alguna de ellas tu nombre quedará registrado para que todo el mundo pueda ver lo máquina que eres.</string>
    <string name="instructions_eight">¡A ver cuántos niveles eres capaz de superar!</string>

    <!-- DASHBOARD -->
    <string name="dashboard_level">Nivel %s</string>
    <string name="dashboard_timer_restart">3</string>
    <string name="dashboard_timer_zero">0</string>

    <!-- RANKING -->
    <string name="ranking_title">Mejores puntuaciones</string>
    <string name="ranking_text">Estos son los niveles alcanzados por los 10 mejores jugadores</string>
    <string name="ranking_first">1.</string>
    <string name="ranking_number">%s.</string>

    <!-- NEW WORLD RECORD -->
    <string name="new_world_record_title">¡Nuevo récord!</string>
    <string name="new_world_record_name">Introduce tu nombre</string>
    <string name="new_world_record_error">El nombre no puede estar vacío</string>
    <string name="new_world_record_record">Tu récord: %s</string>
    <string name="new_world_record_btn">Enviar</string>

    <!-- END GAME -->
    <string name="end_game_bad_timer_zero">Se acabó el tiempo</string>
    <string name="end_game_bad_no_lifes">Te has quedado sin vidas</string>
    <string name="end_game_bad_btn">Empezar de nuevo</string>
    <string name="end_game_record">Récord:</string>
    <string name="end_game_old_record">Antiguo récord:</string>
    <string name="end_game_last_level">Nivel fallido:</string>
    <string name="end_game_new_record">Nuevo récord:</string>
    <string name="end_game_not_all_juices">No encontraste todos los zumitos</string>
    <string name="end_game_none_juices">No encontraste ningún zumito</string>
    <string name="end_game_new_own_record">¡Has superado tu propio récord!</string>

    <string name="end_game_world_record">¡Has conseguido un nuevo <b>récord mundial</b>!</string>
    <string name="end_game_world_record_question">¿Quieres dejar tu récord en el marcador?</string>
    <string name="end_game_world_record_btn">Registrar récord</string>

    <!-- GOOD LEVEL -->
    <string name="good_level_next_level">Siguiente nivel</string>
    <string name="good_level_all_juices">Todas las vitaminas salvadas</string>
    <string name="good_level_last_level">Nivel %s superado</string>

    <!--  GOOD PHRASES  -->
    <string-array name="goodPhrases">
        <item>Perfectísimo</item>
        <item>Perfecto</item>
        <item>Muy bien</item>
        <item>Genial</item>
        <item>Lo tienes</item>
        <item>Dale chicha</item>
    </string-array>

    <!--  BAD PHRASES  -->
    <string-array name="badPhrases">
        <item>No ves tres en un burro</item>
        <item>Que desastre</item>
        <item>Hora de llamar al oculista</item>
        <item>Horrible</item>
        <item>Suspenso</item>
        <item>Lo has intentado</item>
        <item>Fracaso absoluto</item>
    </string-array>

</resources>