<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_dialog"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_logo" />

        <TextView
            style="@style/BigTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/result"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="58sp" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:alpha="0.7"
            android:gravity="center"
            android:text="@string/menu_description"
            android:textAllCaps="true" />

        <include
            layout="@layout/include_five_juices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/btn_start"
            style="@style/MediumTextView_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_white_box"
            android:backgroundTint="@color/blue"
            android:elevation="6dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/menu_normal"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/btn_instructions"
            style="@style/MediumTextView_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_white_box"
            android:backgroundTint="@color/hard_blue"
            android:elevation="6dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/menu_instructions"
            android:textAllCaps="true" />

        <TextView
            style="@style/SmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/menu_ranking_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_ranking"
            style="@style/MediumTextView_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_white_box"
            android:backgroundTint="@color/white"
            android:elevation="6dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/menu_ranking"
            android:textAllCaps="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>