<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/BigTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="6dp"
            android:layout_toStartOf="@id/btn_close"
            android:text="@string/new_world_record_title"
            android:textAllCaps="true" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_cross"
            app:tint="@color/black" />

    </RelativeLayout>

    <TextView
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/new_world_record_name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"
        android:background="@drawable/bg_edit_text_new_record"
        android:imeOptions="actionDone"
        android:inputType="textPersonName|textCapSentences"
        android:maxLength="40"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_your_record"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/new_world_record_record" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/MediumTextView_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/new_world_record_error"
        android:textColor="@color/cancel"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_register"
        style="@style/MediumTextView_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_box"
        android:backgroundTint="@color/soft_blue"
        android:elevation="6dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/new_world_record_btn"
        android:textAllCaps="true"
        android:textColor="@color/black" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/black"
        app:indicatorSize="36dp"
        app:trackThickness="6dp" />

</LinearLayout>