<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        style="@style/scroll_no_effects"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="64dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/instructions_one" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_juice" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_juice" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_juice" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_juice" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_juice" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_poison_one" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_poison_two" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_poison_three" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_poison_four" />

                </TableRow>

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/instructions_two" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/instructions_three" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_four" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/instructions_five" />

                <include
                    layout="@layout/include_lifes_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/instructions_six" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/instructions_seven" />

                <TextView
                    style="@style/MediumTextView_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/instructions_eight" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>