<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_dialog"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieBadResult"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/heart_broken" />

        <TextView
            android:id="@+id/tv_phrase"
            style="@style/BigTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/result"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/result_failed"
            android:textSize="46sp"
            android:textStyle="bold"
            tools:text="Esperaba más de ti" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_white_box"
            android:backgroundTint="@color/soft_orange"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tv_level_record"
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                tools:text="Record: 56" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/end_game_last_level" />

                <TextView
                    android:id="@+id/tv_level_failed"
                    style="@style/MediumTextView_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    tools:text="8" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            style="@style/SmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:alpha="0.5"
            android:gravity="center"
            android:textAllCaps="true"
            tools:text="@string/end_game_not_all_juices" />

        <include
            android:id="@+id/juices_result"
            layout="@layout/include_juices_endgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/btn_start_again"
            style="@style/MediumTextView_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_white_box"
            android:backgroundTint="@color/orange"
            android:elevation="6dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/end_game_bad_btn"
            android:textAllCaps="true"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>